nail-energy.html

--- a/nail-energy.html
+++ b/nail-energy.html
@@ -80,6 +80,7 @@
       <option value="1">1 張牌｜快速對頻</option>
       <option value="3">3 張牌｜過去・現在・未來</option>
       <option value="5">5 張牌｜靈魂導航</option>
+      <option value="9">9 張牌｜靈魂藍圖 × 宇宙訊息 X光掃描</option>
     </select><br><br>
     <button onclick="drawCards()">點我抽牌</button>
   </div>
