--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         }
 
         function drawCards(num) {
-            alert("請閉上眼睛，深呼吸，專心想著您的問題，再點擊確認");
+            alert("請閉上眼睛，深呼吸，專心想著您的問題，再點擊確認。(關閉按下後即抽牌");
             selectedCards = [];
             let totalCards = 130;
             while (selectedCards.length < num) {
