--- a/index.html
+++ b/index.html
@@ -5,40 +5,69 @@
 <title>馥靈之鑰 Hour Light｜芳香能量調頻線上抽牌</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
-/* ……原本 CSS 全留…… */
-body{/*...*/}
-h1{/*...*/}
-button{/*...*/}
-.card-container{/*...*/}
-/* ★★ 新增：解牌結果區塊樣式 ★★ */
+/*━━─ 你的原本 CSS (不變) ─━━━━━━━━━━━━━━━━━━━━━━*/
+body{
+  background:url('https://github.com/HourLight/11/raw/main/background.jpg') no-repeat center center fixed;
+  background-size:cover;font-family:Arial,sans-serif;color:#333;text-align:center;padding:20px;margin:0;
+}
+h1{color:#6b4f3e;font-size:32px;background:rgba(255,255,255,.8);display:inline-block;padding:10px 20px;
+  border-radius:15px;margin-bottom:15px;box-shadow:0 2px 5px rgba(0,0,0,.2);}
+button{
+  background:#a28572;color:#fff;border:none;padding:15px 25px;cursor:pointer;font-size:20px;margin:8px;
+  border-radius:15px;box-shadow:0 2px 8px rgba(0,0,0,.2);transition:.3s;
+}
+button:hover{background:#6b4f3e;transform:translateY(-2px);}
+.card-container{display:inline-block;margin:15px;text-align:center;vertical-align:top;}
+.card-container img{width:220px;border-radius:15px;box-shadow:0 0 10px rgba(0,0,0,.3);}
+.card-number{margin-top:10px;font-size:22px;font-weight:bold;background:rgba(255,255,255,.7);
+  padding:5px 10px;border-radius:8px;}
+#copyBtn{font-size:22px;padding:12px 20px;margin-top:20px;background:#cda86e;}
+.home-button{display:inline-block;padding:8px 20px;background:#cda86e;color:#fff;text-decoration:none;
+  border-radius:8px;box-shadow:0 3px 6px rgba(0,0,0,.2);transition:.3s;margin:25px auto;}
+.home-button:hover{background:#a28572;transform:translateY(-2px);}
+@media(max-width:768px){
+  button,#copyBtn{width:80%;margin:12px auto;padding:18px 0;font-size:24px;}
+  .card-container img{width:90%;}
+}
+/*━━─ ★★ 新增：GPT 解牌顯示區塊樣式 ─━━━━━━*/
 #answer{
-  white-space:pre-wrap;background:rgba(255,255,255,.9);
-  border:1px solid #bbb;padding:15px;margin:25px auto;
-  max-width:800px;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,.1);
-  font-size:18px;line-height:1.6;color:#333;display:none;
+  white-space:pre-wrap;background:rgba(255,255,255,.9);border:1px solid #bbb;padding:15px;margin:25px auto;
+  max-width:800px;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,.1);font-size:18px;
+  line-height:1.6;color:#333;display:none;
 }
 </style>
 </head>
 <body>
+<!-- ━━ 你的原有說明、選單區塊（保持原樣） ━━━━━━━━━-->
+<div style="max-width: 800px; margin: 40px auto 20px; background: rgba(255,255,255,0.8); padding: 25px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); font-size: 18px; line-height: 1.6;">
+  <!-- …內容略 … -->
+</div>
 
-<!-- 省略前面說明與按鈕的 HTML，不變 -->
+<h1>馥靈之鑰 Hour Light｜芳香能量調頻線上抽牌</h1>
+
+<div>
+  <button onclick="drawCards(1)">抽 1 張</button>
+  <button onclick="drawCards(3)">抽 3 張</button>
+  <button onclick="drawCards(5)">抽 5 張</button>
+  <button onclick="drawCards(7)">抽 7 張</button>
+  <button onclick="drawCards(9)">抽 9 張</button>
+  <button onclick="drawCards(12)">抽 12 張</button>
+  <button onclick="drawCards(15)">抽 15 張</button>
+  <!-- ★★ 新增：直接解析按鈕 ★★ -->
+  <button id="interpretBtn" style="background:#6b4f3e;">🌿 直接解析（不跳轉）</button>
+</div>
 
 <div id="result"></div>
-
-<!-- ★★ 新增：直接解析按鈕 ★★ -->
-<button id="interpretBtn" style="background:#6b4f3e;">🌿 直接解析（不跳轉）</button>
-
 <button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
 
-<!-- ……原本 Step 3 說明區、預約區、返回首頁按鈕…… -->
+<!-- …… 你的 Step 說明、預約區、返回首頁按鈕 …… -->
 
-<!-- ★★ 新增：顯示 GPT 解牌文字 ★★ -->
+<!-- ★★ GPT 解牌文字呈現區 ★★ -->
 <div id="answer"></div>
 
 <script>
-let selectedCards = [];
-
-/* 你的現有函式：格式化＋抽牌＋複製，都保留 */
+/*━━ 你的原本 JS ━━━━━━━━━━━━━━━━━━━━━━━*/
+let selectedCards=[];
 function formatCardNumber(card){
   return card<=22?'A'+(card-1).toString().padStart(2,'0'):(card-22).toString().padStart(3,'0');
 }
@@ -46,7 +75,7 @@ function drawCards(num){
   alert("請閉上眼睛，深呼吸，專心想著您的問題，再點擊確認。(關閉按下後即抽牌");
   selectedCards=[];
   while(selectedCards.length<num){
-    let n=Math.floor(Math.random()*130)+1;
+    const n=Math.floor(Math.random()*130)+1;
     if(!selectedCards.includes(n))selectedCards.push(n);
   }
   const resultDiv=document.getElementById('result');
@@ -55,14 +84,12 @@ function drawCards(num){
     const fc=formatCardNumber(c);
     const box=document.createElement('div');
     box.className='card-container';
-    box.innerHTML=`
-      <img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${c}.jpg">
-      <div class="card-number">編號：${fc}</div>`;
+    box.innerHTML=`<img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${c}.jpg">
+                   <div class="card-number">編號：${fc}</div>`;
     resultDiv.appendChild(box);
   });
-  document.getElementById('answer').style.display='none';       // 抽新牌先隱藏舊解析
+  document.getElementById('answer').style.display='none'; // 抽新牌時先隱藏舊解析
 }
-
 function copyResult(){
   if(selectedCards.length===0){alert("請先抽牌後再複製！");return;}
   const txt=selectedCards.map(formatCardNumber).join(', ');
@@ -70,29 +97,29 @@ function copyResult(){
     .catch(()=>alert('複製失敗，請手動複製：'+txt));
 }
 
-/* ★★ 新增：呼叫你自己的 GPT 後端取得解牌 ★★ */
+/*━━ ★★ 新增：直接解析函式 ━━━━━━━━━━━*/
 async function interpretNow(){
   if(selectedCards.length===0){
-    alert("請先抽牌，再點解析！");return;
+    alert('請先抽牌！');return;
   }
   const prompt=selectedCards.map(formatCardNumber).join(', ');
-  const answerBox=document.getElementById('answer');
-  answerBox.textContent='思考中…';
-  answerBox.style.display='block';
+  const box=document.getElementById('answer');
+  box.style.display='block';
+  box.textContent='思考中…';
   try{
-    const res=await fetch('https://ai-x2if.onrender.com/api/chat',{
+    const r=await fetch('https://ai-x2if.onrender.com/api/chat',{
       method:'POST',
       headers:{'Content-Type':'application/json'},
       body:JSON.stringify({prompt})
     });
-    const data=await res.json();
-    answerBox.textContent=data.text||data.error||'解析失敗，請稍後再試！';
+    const d=await r.json();
+    box.textContent=d.text||d.error||'解析失敗，請稍後再試！';
   }catch(e){
-    answerBox.textContent='伺服器打瞌睡，請稍後再試！';
+    box.textContent='伺服器打瞌睡，請稍後再試！';
     console.error(e);
   }
 }
-document.getElementById('interpretBtn').addEventListener('click',interpretNow);
+document.getElementById('interpretBtn').addEventListener('click', interpretNow);
 </script>
 </body>
 </html>
